[bumpversion]
current_version = 1.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
; addopts = --pdb
; addopts = --pdb -x
; addopts = --pdb -x tests/test_auth.py::TestWithMultiBackendAuth::test_invalid_auth_fails
